syntax = "proto3";
package TFGProtocol;

import "google/protobuf/timestamp.proto";
option csharp_namespace = "TFG.Protobuf";

message DadaGenerada 
{
	double valor=1;
	string nomSensor=2;
}

message CalculDada
{
	string variableCalcular=1;
	string variableRebuda=2;
	double valorRebut=3;	
	uint32 timeStampRebut=4;
	uint32 timeStampActual=5;
}

message Dada
{
	double valor=1;	
}

message DatesConsulta
{
	google.protobuf.Timestamp dataInici=1;
	google.protobuf.Timestamp dataFi=2;
}

message RespostaDades
{
	repeated Dada Dades=1;
}


